Issue #MKBDIGI-151: Fixed z-index of continue button

--- a/src/Os2Display/AdminBundle/Resources/sass/modules/_create-channel.scss
+++ b/src/Os2Display/AdminBundle/Resources/sass/modules/_create-channel.scss
@@ -386,6 +386,7 @@ $breakpoint-arrow-switch : 693px;
     bottom: -5px;
     margin-top: 2em;
     position: sticky;
+    z-index: 2;
   }
 
   &--unavailable-groups {
