--- a/src/Os2Display/AdminBundle/Resources/sass/modules/_create-slide.scss
+++ b/src/Os2Display/AdminBundle/Resources/sass/modules/_create-slide.scss
@@ -294,5 +294,6 @@
     bottom: -5px;
     margin-top: 2em;
     position: sticky;
+    z-index: 2;
   }
 }
